<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nahi Mobile Finder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_guide">User Guide</string>
    <string name="config">Config</string>
    <string name="backup">Back up</string>
    <string name="type_protect">Security</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="uninstall">Uninstall</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="about_content">This is content for about</string>
    <string name="last_version">This is the last version</string>
    <string name="rename_device">Rename device</string>
    <string name="set_phone_number">Set phone number</string>
    <string name="set_account_NAHI">Set account</string>
    <string name="set_language">Set language</string>
    <string name="backup_data">Back up</string>
    <string name="restore_data">Restore</string>
    <string name="auto_backup_data">Auto backup</string>
    <string name="auto_protect">Auto protect</string>
    <string name="protect_by_sim">Protect by sim</string>
    <string name="protect_from_nahi">Protect by NAHI</string>
    <string name="auto_wifi">Auto wifi</string>
    <string name="following_device_on_24h">Tracking on 24h</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="premium">Premium</string>
    <string name="login_nahi">Login NAHI</string>
    <string name="login">Login</string>
    <string name="register">Register account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="password">******</string>
    <string name="times_login_failed">Login attempt failure</string>
    <string name="auto_network">Get location</string>
    <string name="locate">Get Location</string>
    <string name="capture">Capture</string>
    <string name="delete_data_and_reset">Wipe data</string>
    <string name="display_icon">Display icon</string>
    <string name="phone_number_premote">Phone number</string>
    <string name="notify_when_changed_sim">Change sim</string>
    <string name="select_alarm_sound">Select sound</string>
    <string name="contacts">Contacts</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="call_logs">Call Logs</string>
    <string name="messages">Message</string>
    <string name="picker">Picker</string>
    <string name="remote_by_sim">Remote by sim</string>
    <string name="input_number">Input number</string>
    <string name="saved_contact">Saved contact</string>
    <string name="please_input_number">Please input number</string>
    <string name="please_set_name">Please set name for device</string>
    <string name="named_device">Named device</string>
    <string name="device_admin_actived">Device admin is actived</string>
    <string name="device_admin_not_actived">Device admin has not actived yet</string>
    <string name="login_failed">Login failure, please try again!</string>
    <string name="password_protect">Password protect</string>
    <string name="do_you_set_password">Do you want to set password or pattern to lock screen?</string>
    <string name="limit_login">Limit login</string>
    <string name="add_number">Add a number</string>
    <string name="remove_number">Remove number</string>
    <string name="do_you_want_to_remove_number">Do you want to remove %1$s number?</string>
    <string name="add_number_fails">Add number failure</string>
    <string name="exist_number">Existing number</string>
    <string name="backup_fails">Backup failure</string>
    <string name="restore_fails">Restore failure</string>
    <string name="backup_success">Backup success</string>
    <string name="restore_success">Restore success</string>
    <string name="select_default_launcher">Select the default launcher setting to use the Finder Lock screen</string>
    <string name="clear_default_launcher"> You must clear the default launcher setting to use the Finder Lock screen</string>
    <string name="active_launcher">Active launcher</string>
	<string name="active_device_admin">Active device admin</string>
	<string name="deactive_device_admin">Deactive device admin to login another NAHI account</string>
	<string name="intput_email_password">Input email and password</string>
	
	
    <string-array name="sms_control_device_syntaxes">
        <item>alert</item>
        <item>location</item>
        <item>image</item>
        <item>lock</item>
        <item>message</item>
        <item>icon</item>
        <item>backup</item>
        <item>wipe</item>
    </string-array>
    <string-array name="gcm_control_device_syntaxes">
        <item>9112</item> <!-- Lock -->
        <item>9113</item> <!-- Alert -->
        <item>9114</item> <!-- Wipe -->
        <item>9115</item> <!-- Backup -->
        <item>9116</item> <!-- Get Location -->
        <item>9117</item> <!-- Display message -->
        <item>9121</item> <!-- Sync setting -->
    </string-array>

    <string name="enter_unlock_code">Enter unlock code:</string>
    <string name="unlock_code">Unlock screen code</string>
    <string name="incorrect">Incorrect</string>
    <string name="press_any_key_to_dismiss">Enter any number to dismiss</string>
    <string name="content_description_img">Image description</string>
    <string name="stop">Stop</string>
    <string name="device_report_change_sim">Device %1$s was changed sim</string>
    <string name="capture_image_sender_content">Capturing images from your lost device have sent to the registered email</string>
    <string name="options">Options</string>
    <string name="content">\t\tThis privacy policy will protect any information that you give when you use this application.
\n\t\tThe application is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using this application, then you can be assured that it will only be used in accordance with this privacy statement.
\n\t\tThis application may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you are happy with any changes. This policy is effective from 25-05-2013.
\n\t\tWe are committed to ensuring that your information is secure. In order to prevent unauthorised access or disclosure, we have to check google account in your device.</string>
    <string name="title">Privacy</string>
    <string name="no_connection_title">Internet connection</string>
    <string name="no_connection_msg">No internet connection, please check your internet connection</string>
    <string name="backup_data_progress_title">Backup Data</string>
    <string name="backup_data_progress_msg">Backing up contact, sms and call log&#8230;</string>
    <string name="restore_data_progress_title">Restore Data</string>
    <string name="restore_data_progress_msg">Restoring up contact, sms and call log&#8230;</string>
    <string name="get_location_msg">Sent from location: %1$s,%2$s\nAddress: %3$s</string>
    <string name="incorrect_password_title">Incorrect</string>
    <string name="incorrect_password_msg">Password is incorrect</string>
  	<string name="login_title">Login</string>
  	<string name="loading_msg">Loading&#8230;</string>
  	<string name="require_sim_card_title">Require SIM card</string>
  	<string name="require_sim_card_msg">Device has not SIM card, please insert SIM card to your device</string>
    <string name="require_config_title">Requirce config</string>
    <string name="require_config_msg">Please setup the config options before using %1$s</string>
    <string name="require_backup">backup</string>
    <string name="require_security">security</string>    
    <string name="require_username_password_title">Require username and password</string>
    <string name="require_username_password_msg">Missing username or password, please try again</string>  
    <string name="url_help">http://cp.nahi.vn/userguide/findmobile.html?lang=en</string> 
    <string name="expire">Expire : </string>    
    <string name="premium_content">- Tracking the locations of device on the last 24h.\n- Allow to backup and restore 10 versions of contact, sms and call log.\n- Allow to remote wipe data.</string>
	<string name="premium_title">Let buy premium package to :</string>
	<string name="buy">Buy</string>

</resources>